--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <ul>
         <li><a href="chapter1/index.html">📂 Chapter 1 - HTML 기본</a></li>
-        <li><a href="chapter2/index.html">📂 Chapter 2 - HTML 폼과 입력</a></li>
+        <li><a href="chapter_2/index.html">📂 Chapter 2 - HTML 폼과 입력</a></li>
         <li><a href="chapter3/index.html">📂 Chapter 3 - 테이블과 리스트</a></li>
     </ul>
 
