--- a/index.html
+++ b/index.html
@@ -32,9 +32,15 @@
     <p>아래 링크를 클릭하면 각 챕터별 HTML 예제를 확인할 수 있습니다.</p>
 
     <ul>
-        <li><a href="chapter1/index.html">📂 Chapter 1 - HTML 기본</a></li>
-        <li><a href="Chapter_2/index.html">📂 Chapter 2 - HTML 폼과 입력</a></li>
-        <li><a href="chapter3/index.html">📂 Chapter 3 - 테이블과 리스트</a></li>
+        <li><a href="Chapter_2/index.html">📂 Chapter 2 - 웹 페이지 기본 구조와 작성 방법</a></li>
+        <li><a href="chapter3/index.html">📂 Chapter 3 - HTML5 기본 태그</a></li>
+        <li><a href="chapter4/index.html">📂 Chapter 4 - HTML5 입력 양식 태그와 구조화 태그</a></li>
+        <li><a href="chapter5/index.html">📂 Chapter 5 - CSS3 기초</a></li>
+        <li><a href="chapter6/index.html">📂 Chapter 6 - CSS3 속성</a></li>
+        <li><a href="chapter7/index.html">📂 Chapter 7 - 다양한 레이아웃의 구성과기능</a></li>
+        <li><a href="chapter8/index.html">📂 Chapter 8 - 반응형 웹</a></li>
+        <li><a href="chapter9/index.html">📂 Chapter 9 - 자바스크립트 기본 문법</a></li>
+        <li><a href="chapter10/index.html">📂 Chapter 10 - HTML5 기본 태그</a></li>
     </ul>
 
     <p>각 챕터를 클릭하면 해당 실습 파일을 확인할 수 있습니다.</p>
