--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <p>아래 링크를 클릭하면 각 챕터별 HTML 예제를 확인할 수 있습니다.</p>
 
     <ul>
-        <li><a href="Chapter_2/index.html">📂 Chapter 2 - 웹 페이지 기본 구조와 작성 방법</a></li>
+        <li><a href="Chapter2/index.html">📂 Chapter 2 - 웹 페이지 기본 구조와 작성 방법</a></li>
         <li><a href="chapter3/index.html">📂 Chapter 3 - HTML5 기본 태그</a></li>
         <li><a href="chapter4/index.html">📂 Chapter 4 - HTML5 입력 양식 태그와 구조화 태그</a></li>
         <li><a href="chapter5/index.html">📂 Chapter 5 - CSS3 기초</a></li>
